students/KashpirDmitriy/task_02/src/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    org.bstu.student.fullname: kashpir-dmitriy-ruslanovich
    org.bstu.student.id: "220043"
    org.bstu.group: as-64
    org.bstu.variant: "34"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "kashpirdr"
    org.bstu.student.slug: "as-64-220043-v34"
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
