students/KashpirDmitriy/task_02/src/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    org.bstu.student.fullname: kashpir-dmitriy-ruslanovich
    org.bstu.student.id: "220043"
    org.bstu.group: as-64
    org.bstu.variant: "34"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "kashpirdr"
    org.bstu.student.slug: "as-64-220043-v34"
spec:
  rules:
    - host: web.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
